# llvm-omp-chunks

./: CMakeLists.txt  README.md
runtime/exports/common.deb.ompt.no-ompt-blame.no-ompt-trace/include/: ompt.h
runtime/src/: kmp.h  kmp_csupport.cpp  kmp_dispatch.cpp  kmp_sched.cpp  kmp_tasking.cpp  ompt-event-specific.h
